# mlirToyExample

./: CMakeLists.txt  README.md  shell.nix
docs/: AttributesAndTypes.md  Bufferization.md  FFI.md  Interfaces.md  Operations.md  Passes.md  Traits.md
include/: CMakeLists.txt
include/ToyLang/: CMakeLists.txt
include/ToyLang/Conversions/: CMakeLists.txt
include/ToyLang/Conversions/Arrays/: ArraysToStandard.h  ArraysToStandard.td  CMakeLists.txt
include/ToyLang/Conversions/General/: AllToStandard.h  AllToStandard.td  CMakeLists.txt
include/ToyLang/Conversions/Primitive/: CMakeLists.txt  PrimitiveToStandard.h  PrimitiveToStandard.td
include/ToyLang/Dialect/: CMakeLists.txt  ToyDialect.td
include/ToyLang/Dialect/Arrays/: ArraysAttr.h  ArraysAttr.td  ArraysDialect.h  ArraysDialect.td  ArraysInterface.h  ArraysInterface.td  ArraysInterfaces.h  ArraysInterfaces.td  ArraysOps.h  ArraysOps.td  ArraysTrait.h  ArraysType.h  ArraysType.td  CMakeLists.txt
include/ToyLang/Dialect/Primitive/: CMakeLists.txt  PrimitiveAttr.h  PrimitiveAttr.td  PrimitiveDialect.h  PrimitiveDialect.td  PrimitiveInterfaces.h  PrimitiveInterfaces.td  PrimitiveOps.h  PrimitiveOps.td  PrimitiveTraits.h  PrimitiveTraits.td  PrimitiveTypes.h  PrimitiveTypes.td
include/ToyLang/Dialect/PrimitiveDialect/: CMakeLists.txt  PrimitiveAttr.h  PrimitiveAttr.td  PrimitiveDialect.h  PrimitiveDialect.td  PrimitiveOps.h  PrimitiveOps.td  PrimitiveTypes.h  PrimitiveTypes.td
include/ToyLang/Dialect/Toy/: ToyDialect.h
include/ToyLang/Passes/Arrays/: CMakeLists.txt  Passes.h  Passes.td
include/ToyLang/Passes/Primitive/: CMakeLists.txt  Passes.h  Passes.td  PrintPass.h  PrintPass.td
lib/Conversions/Arrays/: ArraysToStandard.cpp  CMakeLists.txt
lib/Conversions/General/: AllToStandard.cpp  CMakeLists.txt
lib/Conversions/Primitive/: CMakeLists.txt  PrimitiveToStandard.cpp
lib/Dialect/: CMakeLists.txt
lib/Dialect/Arrays/: ArraysDialect.cpp  ArraysInterface.cpp  ArraysInterfaces.cpp  ArraysParser.cpp  CMakeLists.txt
lib/Dialect/Primitive/: CMakeLists.txt  PrimitiveDialect.cpp  PrimitiveInterfaces.cpp  PrimitiveOps.cpp  PrimitiveParser.cpp
lib/Dialect/PrimitiveDialect/: CMakeLists.txt  PrimitiveDialect.cpp
lib/Dialect/ToyDialect/: ToyDialect.cpp
lib/Passes/Arrays/: CMakeLists.txt  Passes.cpp
lib/Passes/Primitive/: CMakeLists.txt  Passes.cpp
src/: CMakeLists.txt  main.cpp
tests/: .gitignore  .lit_test_times.txt  array_syntax.mlir  arrays_to_llvm.mlir  arrays_to_llvm_main.c  arrays_to_llvm_main.cpp  arrays_to_standard.mlir  binops_to_standard.mlir  canon_array.mlir  canonicalize.mlir  const_hoist.mlir  constant_pass.mlir  dyn_arrays.mlir  forLoop.mlir  lit.cfg.py  loop_unroll.mlir  lower_add.mlir  prim_syntax.mlir  primitive_func.mlir  primitive_to_llvm.mlir  primitive_to_llvm_main.c  sccp.mlir  shape_infer.mlir  strings.mlir  test_int_addop.mlir  test_type1.mlir
tests/Output/: test_type1.mlir.script
